--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-streamlit
-pandas
-numpy
-plotly
-scipy
-statsmodels
-scikit-posthocs
-matplotlib
+streamlit==1.51.0
+pandas==2.3.3
+numpy==2.3.4
+scipy==1.16.3
+plotly==6.4.0
+matplotlib==3.10.7
+scikit-posthocs==0.11.4
+openpyxl==3.1.5
+statsmodels==0.14.5
 seaborn
-openpyxl
+
 
 
 
